// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/ColorDropdown Custom Colors Example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "200px",
        }
      }
    >
      <div
        className="bx--dropdown__wrapper bx--list-box__wrapper"
      >
        <label
          className="bx--label"
          htmlFor="downshift-7-toggle-button"
          id="downshift-7-label"
        >
          Color
        </label>
        <div
          className="bx--dropdown iot--color-dropdown bx--list-box"
          id="myColorDropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-labelledby="downshift-7-label downshift-7-toggle-button"
            className="bx--list-box__field"
            disabled={false}
            id="downshift-7-toggle-button"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className="bx--list-box__label"
            >
              Select a color
            </span>
            <div
              className="bx--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height={16}
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <div
            aria-labelledby="downshift-7-label"
            className="bx--list-box__menu"
            id="downshift-7-menu"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            role="listbox"
            tabIndex={-1}
          />
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/ColorDropdown Default Example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "200px",
        }
      }
    >
      <div
        className="bx--dropdown__wrapper bx--list-box__wrapper"
      >
        <label
          className="bx--label"
          htmlFor="downshift-5-toggle-button"
          id="downshift-5-label"
        >
          Color
        </label>
        <div
          className="bx--dropdown iot--color-dropdown bx--list-box"
          id="myColorDropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-labelledby="downshift-5-label downshift-5-toggle-button"
            className="bx--list-box__field"
            disabled={false}
            id="downshift-5-toggle-button"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className="bx--list-box__label"
            >
              Select a color
            </span>
            <div
              className="bx--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height={16}
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <div
            aria-labelledby="downshift-5-label"
            className="bx--list-box__menu"
            id="downshift-5-menu"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            role="listbox"
            tabIndex={-1}
          />
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots Watson IoT Experimental/ColorDropdown Preset Selection Example 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      style={
        Object {
          "width": "200px",
        }
      }
    >
      <div
        className="bx--dropdown__wrapper bx--list-box__wrapper"
      >
        <label
          className="bx--label"
          htmlFor="downshift-6-toggle-button"
          id="downshift-6-label"
        >
          Color
        </label>
        <div
          className="bx--dropdown iot--color-dropdown bx--list-box"
          id="myColorDropdown"
          onClick={[Function]}
          onKeyDown={[Function]}
        >
          <button
            aria-disabled={false}
            aria-expanded={false}
            aria-haspopup="listbox"
            aria-labelledby="downshift-6-label downshift-6-toggle-button"
            className="bx--list-box__field"
            disabled={false}
            id="downshift-6-toggle-button"
            onClick={[Function]}
            onKeyDown={[Function]}
            type="button"
          >
            <span
              className="bx--list-box__label"
            >
              <div
                className="iot--color-dropdown__item"
                title="teal70"
              >
                <div
                  className="iot--color-dropdown__color-sample"
                  style={
                    Object {
                      "backgroundColor": "#005d5d",
                    }
                  }
                  title="#005d5d"
                />
                <div
                  className="iot--color-dropdown__color-name"
                >
                  teal70
                </div>
              </div>
            </span>
            <div
              className="bx--list-box__menu-icon"
            >
              <svg
                aria-label="Open menu"
                fill="currentColor"
                focusable="false"
                height={16}
                name="chevron--down"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 16 16"
                width={16}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                />
                <title>
                  Open menu
                </title>
              </svg>
            </div>
          </button>
          <div
            aria-labelledby="downshift-6-label"
            className="bx--list-box__menu"
            id="downshift-6-menu"
            onBlur={[Function]}
            onKeyDown={[Function]}
            onMouseLeave={[Function]}
            role="listbox"
            tabIndex={-1}
          />
        </div>
      </div>
    </div>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</div>
`;
